R PECD for 11.5 eV label modification

--- a/72_2D_MFPADs_experiment.ipynb
+++ b/72_2D_MFPADs_experiment.ipynb
@@ -108,7 +108,7 @@
     "check.all_members; #all members of the single histogram\n",
     "\n",
     "#set the gaussian for the smoothing before PECD and/or contrast maps\n",
-    "gaussian=0.6"
+    "gaussian=0.3"
    ]
   },
   {
@@ -576,13 +576,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "testStot=np.sum((np.sum(MFPAD_SCLCR_phi_norm.reshape(12,6,-1),axis=0)).reshape(6,nphi,ncos),axis=1)\n",
     "testRtot=np.sum((np.sum(MFPAD_RCLCR_phi_norm.reshape(12,6,-1),axis=0)).reshape(6,nphi,ncos),axis=1)\n",
-    "\n",
     "PECD_test_RCLCR=np.sum((np.sum(PECD_RCLCR.reshape(12,6,-1),axis=0)).reshape(6,nphi,ncos),axis=1)\n",
-    "PECD_test_SCLCR=np.sum((np.sum(PECD_SCLCR.reshape(12,6,-1),axis=0)).reshape(6,nphi,ncos),axis=1)\n",
     "\n",
-    "PECD_test = np.nan_to_num(np.divide(np.subtract(testStot,testRtot),np.add(testStot,testRtot))) #TEST\n"
+    "if fileSCL and fileSCR is not None:\n",
+    "    testStot=np.sum((np.sum(MFPAD_SCLCR_phi_norm.reshape(12,6,-1),axis=0)).reshape(6,nphi,ncos),axis=1)\n",
+    "    PECD_test_SCLCR=np.sum((np.sum(PECD_SCLCR.reshape(12,6,-1),axis=0)).reshape(6,nphi,ncos),axis=1)\n",
+    "    PECD_test = np.nan_to_num(np.divide(np.subtract(testStot,testRtot),np.add(testStot,testRtot))) #TEST\n"
    ]
   },
   {
@@ -591,7 +591,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.pcolormesh(PECD_test_SCLCR.T)"
+    "#test integration of PECD to resamble the diatomic\n",
+    "if fileSCL and fileSCR is not None:\n",
+    "    plt.pcolormesh(PECD_test_SCLCR.T)\n",
+    "else:\n",
+    "    plt.pcolormesh(PECD_test_RCLCR.T)"
    ]
   },
   {
@@ -624,7 +628,8 @@
     "# fugi = reload(fugi)\n",
     "\n",
     "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize=(15,4))\n",
-    "ax1.contourf(phiM,cosM,MFPAD_SCLCR[7].T)\n",
+    "if fileSCL and fileSCR is not None:\n",
+    "    ax1.contourf(phiM,cosM,MFPAD_SCLCR[7].T)\n",
     "ax2.contourf(phiM,cosM,MFPAD_RCLCR[13].T)\n",
     "# cs,ax2=fugi.plot_interpolation(phiM,cosM,MFPAD_RCR[71].T, ax=ax2, kind=\"linear\", xstep=30, ystep=0.1, n=8)\n",
     "ax3.contourf(phiM,cosM,MFPAD_tottest)\n",
@@ -695,10 +700,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
+    "\n",
+    "#NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
+    "for i,ax in enumerate(np.flip(axes.T,axis=1).ravel()):\n",
+    "    cs,ax=fugi.plot_interpolation(phiM,cosM,(PECD_RCLCR_smooth[i]*100).T, ax=ax, cmap=cmap_temp, limits=[-40.,40.], kind=\"linear\", xstep=5, ystep=0.05, n=15, gaussian=1.2)\n",
+    "    ax.tick_params(labelsize=12)\n",
+    "\n",
+    "    if i == 4:\n",
+    "        ax.spines[:].set_color('blue')\n",
+    "        ax.spines[:].set_linewidth(5)\n",
+    "    elif i == 37:\n",
+    "        ax.spines[:].set_color('red')\n",
+    "        ax.spines[:].set_linewidth(5)\n",
+    "    \n",
+    "cbar = fig.colorbar(cs, ax=axes.ravel().tolist(), anchor=(1.5,1), pad=-2.5)\n",
+    "cbar.ax.set_ylabel('PECD %')\n",
+    "\n",
+    "fugi.overlaygraph(fig)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/TFMOX/72PECD_\"+CH+\"_\"+ID+\"_\"+en+\"_RCLCR_smooth_phi_exp.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "\n",
+    "if noprint:\n",
+    "    # plt.show()\n",
+    "    plt.close()\n",
+    "else:\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig,ax = plt.subplots(2,1, figsize=(10, 18), sharex=True)\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "\n",
-    "# PECD_RCLCR_smooth\n",
     "\n",
     "cs,ax[0]=fugi.plot_interpolation(phiM,cosM,(PECD_RCLCR[0]*100).T, ax=ax[0], cmap=cmap_temp, limits=[-40.,40.], kind=\"linear\", xstep=5, ystep=0.05, n=15, gaussian=1.2)\n",
     "ax[0].set_ylabel('cos\\u03D1 [adm]')\n",
@@ -1851,8 +1888,8 @@
     "    \n",
     "    ax.set_title(\"R CR-CL b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(np.array(xgo_phi).max()/np.array(ygo_phi).max())\n",
-    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
-    "    ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "    ax.set_xlabel('\\u03C6$_{ph}$ [DEG]')\n",
+    "    ax.set_ylabel('cos\\u03D1$_{ph}$ [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "    \n",
     "    # cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
@@ -1881,11 +1918,11 @@
     "        # cs,ax=fugi.plot_interpolation(xgo_cos,ygo_cos,param_matrix_cos[:,0,0].T*100, ax=ax, cmap=cmap_temp)\n",
     "\n",
     "        aspect=(np.array(xgo_phi).max()/np.array(ygo_phi).max())\n",
-    "        ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "        ax.set_ylabel('cos\\u03D1$_{ph}$ [adm]')\n",
     "        cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "        cbar.ax.set_ylabel(\"asymmetry\")\n",
     "        if i==5:\n",
-    "            ax.set_xlabel('\\u03C6 [DEG]')\n",
+    "            ax.set_xlabel('\\u03C6$_{ph}$ [DEG]')\n",
     "    fig.tight_layout()"
    ]
   },
@@ -1915,7 +1952,7 @@
     "    plt.plot(x_data_new, bspl(x_data_new))\n",
     "    plt.scatter(cosM,cPECD_norm_phi_sm[0],color='r')\n",
     "    plt.errorbar(cosM,cPECD_norm_phi_sm[0], yerr=errPECD_phi[0], fmt=\"o\")\n",
-    "    plt.xlabel('cos(theta)_photon')\n",
+    "    plt.xlabel('cos\\u03D1$_{ph}$')\n",
     "    plt.ylabel('PECD')\n",
     "\n",
     "    plt.show()\n",
@@ -1974,8 +2011,8 @@
     "    \n",
     "    ax.set_title(\"R CR-CL b1 map \"+ID+\" \"+CH+\" \"+en)\n",
     "    aspect=(np.array(xgo_phi).max()/np.array(ygo_phi).max())\n",
-    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
-    "    ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "    ax.set_xlabel('\\u03C6$_{ph}$ [DEG]')\n",
+    "    ax.set_ylabel('cos\\u03D1$_{ph}$ [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "    \n",
     "    # cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
@@ -2003,11 +2040,11 @@
     "        # cs,ax=fugi.plot_interpolation(xgo_cos,ygo_cos,param_matrix_cos[:,0,0].T*100, ax=ax, cmap=cmap_temp)\n",
     "        \n",
     "        ax.set_aspect(aspect)\n",
-    "        ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "        ax.set_ylabel('cos\\u03D1$_{ph}$ [adm]')\n",
     "        cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "        cbar.ax.set_ylabel(\"asymmetry\")\n",
     "        if i==5:\n",
-    "            ax.set_xlabel('\\u03C6 [DEG]')\n",
+    "            ax.set_xlabel('\\u03C6$_{ph}$ [DEG]')\n",
     "    fig.tight_layout()"
    ]
   }
