--- a/72_2D_MFPADs_theory.ipynb
+++ b/72_2D_MFPADs_theory.ipynb
@@ -45,12 +45,11 @@
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=3.0eV';en=\"KE=3eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=4.0eV';en=\"KE=4eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=6.1eV';en=\"KE=6.1eV\";\n",
-    "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=8.2eV';en=\"KE=8.2eV\";\n",
+    "path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=8.2eV';en=\"KE=8.2eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=11.5eV';en=\"KE=11.5eV\";\n",
-    "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=11.5eV';en=\"TEST\";\n",
     "\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/MOx-R/MoX_CPR_positive';en=\"MOx_CPR\";\n",
-    "path = r'../PYTHON_graphs/DATA/Theory/MOx-R/MoX_CPL_negative';en=\"MOX_CPL\";\n",
+    "# path = r'../PYTHON_graphs/DATA/Theory/MOx-R/MoX_CPL_negative';en=\"MOX_CPL\";\n",
     "\n",
     "# glob has to be sorted (both in unix and windows)\n",
     "all_files = sorted(glob.glob(path + \"/**.dat\"))\n",
@@ -625,8 +624,9 @@
    "outputs": [],
    "source": [
     "#//////////////////////////// PECD \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\n",
-    "temp_PECD_SR=np.empty([12,6,20000])\n",
-    "temp_PECD_SR_LF=np.empty([12,6,20000])\n",
+    "temp_PECD_R=np.empty([12,6,20000])\n",
+    "temp_PECD_S=np.empty([12,6,20000])\n",
+    "temp_PECD_S_LF=np.empty([12,6,20000])\n",
     "#cPECD is RS not SR!\n",
     "temp_cPECD_std=np.empty([12,6,100]); temp_cPECD_phi=np.empty([12,6,100]); temp_cPECD_opt=np.empty([12,6,100]); \n",
     "temp_cPECD_err_std=np.empty([12,6,100]); temp_cPECD_err_phi=np.empty([12,6,100]); temp_cPECD_err_opt=np.empty([12,6,100])\n",
@@ -634,8 +634,9 @@
     "for j in range(12):\n",
     "    for i in range(6):\n",
     "        if j>5:\n",
-    "            temp_PECD_SR_LF[j,i]=np.divide(np.subtract(np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[j-6,5-i]),np.add(np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[j-6,5-i]))\n",
-    "            temp_PECD_SR[j,i]=np.divide(np.subtract(np.array(MFPAD_S_phi).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi).reshape(12,6,-1)[j-6,5-i]),np.add(np.array(MFPAD_S_phi).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi).reshape(12,6,-1)[j-6,5-i]))\n",
+    "            temp_PECD_R[j,i]=np.divide(np.subtract(np.array(MFPAD_R_phi).reshape(12,6,-1)[j,i],np.array(MFPAD_R_phi).reshape(12,6,-1)[j-6,5-i]),np.add(np.array(MFPAD_R_phi).reshape(12,6,-1)[j,i],np.array(MFPAD_R_phi).reshape(12,6,-1)[j-6,5-i]))\n",
+    "            temp_PECD_S[j,i]=np.divide(np.subtract(np.array(MFPAD_S_phi).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi).reshape(12,6,-1)[j-6,5-i]),np.add(np.array(MFPAD_S_phi).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi).reshape(12,6,-1)[j-6,5-i]))\n",
+    "            temp_PECD_S_LF[j,i]=np.divide(np.subtract(np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[j-6,5-i]),np.add(np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[j-6,5-i]))\n",
     "            temp_cPECD_std[j,i]=np.divide(np.subtract(cosx_R_std_LF.reshape(12,6,-1)[j,i],cosx_R_std_LF.reshape(12,6,-1)[j-6,5-i]),np.add(cosx_R_std_LF.reshape(12,6,-1)[j,i],cosx_R_std_LF.reshape(12,6,-1)[j-6,5-i]))\n",
     "            temp_cPECD_err_std[j,i]=fugi.error_calc(cosx_R_std_LF.reshape(12,6,-1)[j,i],cosx_R_std_LF.reshape(12,6,-1)[j-6,5-i])\n",
     "            temp_cPECD_phi[j,i]=np.divide(np.subtract(cosx_R_phi_LF.reshape(12,6,-1)[j,i],cosx_R_phi_LF.reshape(12,6,-1)[j-6,5-i]),np.add(cosx_R_phi_LF.reshape(12,6,-1)[j,i],cosx_R_phi_LF.reshape(12,6,-1)[j-6,5-i]))\n",
@@ -644,8 +645,9 @@
     "            temp_cPECD_err_opt[j,i]=fugi.error_calc(cosx_R_phi_opt_LF.reshape(12,6,-1)[j,i],cosx_R_phi_opt_LF.reshape(12,6,-1)[j-6,5-i])       \n",
     "       \n",
     "        else:\n",
-    "            temp_PECD_SR_LF[j,i]=np.divide(np.subtract(np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[6+j,5-i]),np.add(np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[6+j,5-i]))\n",
-    "            temp_PECD_SR[j,i]=np.divide(np.subtract(np.array(MFPAD_S_phi).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi).reshape(12,6,-1)[6+j,5-i]),np.add(np.array(MFPAD_S_phi).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi).reshape(12,6,-1)[6+j,5-i]))\n",
+    "            temp_PECD_R[j,i]=np.divide(np.subtract(np.array(MFPAD_R_phi).reshape(12,6,-1)[j,i],np.array(MFPAD_R_phi).reshape(12,6,-1)[6+j,5-i]),np.add(np.array(MFPAD_R_phi).reshape(12,6,-1)[j,i],np.array(MFPAD_R_phi).reshape(12,6,-1)[6+j,5-i]))\n",
+    "            temp_PECD_S[j,i]=np.divide(np.subtract(np.array(MFPAD_S_phi).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi).reshape(12,6,-1)[6+j,5-i]),np.add(np.array(MFPAD_S_phi).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi).reshape(12,6,-1)[6+j,5-i]))\n",
+    "            temp_PECD_S_LF[j,i]=np.divide(np.subtract(np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[6+j,5-i]),np.add(np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[j,i],np.array(MFPAD_S_phi_LF).reshape(12,6,-1)[6+j,5-i]))\n",
     "            temp_cPECD_std[j,i]=np.divide(np.subtract(cosx_R_std_LF.reshape(12,6,-1)[j,i],cosx_R_std_LF.reshape(12,6,-1)[6+j,5-i]),np.add(cosx_R_std_LF.reshape(12,6,-1)[j,i],cosx_R_std_LF.reshape(12,6,-1)[6+j,5-i]))\n",
     "            temp_cPECD_err_std[j,i]=fugi.error_calc(cosx_R_std_LF.reshape(12,6,-1)[j,i],cosx_R_std_LF.reshape(12,6,-1)[6+j,5-i])\n",
     "            temp_cPECD_phi[j,i]=np.divide(np.subtract(cosx_R_phi_LF.reshape(12,6,-1)[j,i],cosx_R_phi_LF.reshape(12,6,-1)[6+j,5-i]),np.add(cosx_R_phi_LF.reshape(12,6,-1)[j,i],cosx_R_phi_LF.reshape(12,6,-1)[6+j,5-i]))\n",
@@ -653,8 +655,9 @@
     "            temp_cPECD_opt[j,i]=np.divide(np.subtract(cosx_R_phi_opt_LF.reshape(12,6,-1)[j,i],cosx_R_phi_opt_LF.reshape(12,6,-1)[6+j,5-i]),np.add(cosx_R_phi_opt_LF.reshape(12,6,-1)[j,i],cosx_R_phi_opt_LF.reshape(12,6,-1)[6+j,5-i]))\n",
     "            temp_cPECD_err_opt[j,i]=fugi.error_calc(cosx_R_phi_opt_LF.reshape(12,6,-1)[j,i],cosx_R_phi_opt_LF.reshape(12,6,-1)[6+j,5-i])\n",
     "\n",
-    "PECD_SR=np.array(temp_PECD_SR).reshape(72,200,100)\n",
-    "PECD_SR_LF=np.array(temp_PECD_SR).reshape(72,200,100)\n",
+    "PECD_R=np.array(temp_PECD_R).reshape(72,200,100)\n",
+    "PECD_S=np.array(temp_PECD_S).reshape(72,200,100)\n",
+    "PECD_S_LF=np.array(temp_PECD_S).reshape(72,200,100)\n",
     "\n",
     "cPECD_std_LF=np.array(temp_cPECD_std).reshape(72,-1)\n",
     "errPECD_std_LF=np.array(temp_cPECD_err_std).reshape(72,-1)\n",
@@ -745,10 +748,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#NOTE: after the triangluation one has to use phiMM and cosMM\n",
     "fig1, ax = plt.subplots(1,3, figsize=(15,5), constrained_layout=True)\n",
@@ -769,7 +770,7 @@
     "ax[1].set_ylabel('cos\\u03D1 [adm]')\n",
     "ax[1].set_title(\"rot3D with cartesian\")\n",
     "\n",
-    "cs, ax[2]=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi_LF[71].T,ax=ax[2],xstep=1,ystep=0.01)\n",
+    "cs, ax[2]=fugi.plot_interpolation(phiM,cosM,MFPAD_S_phi_LF[71].T,ax=ax[2],xstep=1,ystep=0.1)\n",
     "ax[2].set_xlabel('\\u03C6 [DEG]')\n",
     "ax[2].set_ylabel('cos\\u03D1 [adm]')\n",
     "ax[2].set_title(\"rot3D with cartesian\")\n",
@@ -813,7 +814,40 @@
     "#NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
     "for i,ax in enumerate(np.flip(axes.T,axis=1).ravel()):\n",
     "# for i,ax in enumerate(axes.ravel()):\n",
-    "    cs, ax=fugi.plot_interpolation(phiM,cosM,(PECD_SR[i]*100).T,ax=ax,ystep=0.01, cmap=cmap_temp, limits=[-80.,80.])\n",
+    "    cs, ax=fugi.plot_interpolation(phiM,cosM,(PECD_R[i]*100).T,ax=ax,ystep=0.01, cmap=cmap_temp, limits=[-80.,80.])\n",
+    "    ax.tick_params(labelsize=12)\n",
+    "    \n",
+    "    if i == 4:\n",
+    "        ax.spines[:].set_color('blue')\n",
+    "        ax.spines[:].set_linewidth(5)\n",
+    "    elif i == 37:\n",
+    "        ax.spines[:].set_color('red')\n",
+    "        ax.spines[:].set_linewidth(5)\n",
+    "\n",
+    "cbar = fig.colorbar(cs, ax=axes.ravel().tolist(), anchor=(1.5,1), pad=-3.5)\n",
+    "cbar.ax.set_ylabel('PECD %')\n",
+    "fugi.overlaygraph(fig)\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Theory/72PECD_R_phi_\"+en+\".png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "\n",
+    "if noprint:\n",
+    "    plt.close()\n",
+    "    # plt.show()\n",
+    "else:\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fugi = reload(fugi)\n",
+    "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
+    "#NOTE for cos ordered the scannig order of axis has to be np.flip(axes.T,axis=1).ravel()\n",
+    "for i,ax in enumerate(np.flip(axes.T,axis=1).ravel()):\n",
+    "# for i,ax in enumerate(axes.ravel()):\n",
+    "    cs, ax=fugi.plot_interpolation(phiM,cosM,(PECD_S[i]*100).T,ax=ax,ystep=0.01, cmap=cmap_temp, limits=[-80.,80.])\n",
     "    ax.tick_params(labelsize=12)\n",
     "    \n",
     "    if i == 4:\n",
@@ -844,12 +878,12 @@
     "fig,ax = plt.subplots(2,1, figsize=(10, 18), sharex=True)\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "\n",
-    "cs,ax[0]=fugi.plot_interpolation(phiM,cosM,(PECD_SR[0]*100).T, ax=ax[0], cmap=cmap_temp, limits=[-80.,80.], kind=\"linear\", xstep=5, ystep=0.05, n=15, gaussian=1.2)\n",
+    "cs,ax[0]=fugi.plot_interpolation(phiM,cosM,(PECD_S[0]*100).T, ax=ax[0], cmap=cmap_temp, limits=[-80.,80.], kind=\"linear\", xstep=5, ystep=0.05, n=15, gaussian=1.2)\n",
     "ax[0].set_ylabel('cos\\u03D1 [adm]')\n",
     "# ax[0].set_xlabel('\\u03C6 [DEG]')\n",
     "ax[0].set_aspect(aspect)\n",
     "\n",
-    "cs,ax[1]=fugi.plot_interpolation(phiM,cosM,(PECD_SR[4]*100).T, ax=ax[1], cmap=cmap_temp, limits=[-80.,80.], kind=\"linear\", xstep=5, ystep=0.05, n=15, gaussian=1.2)\n",
+    "cs,ax[1]=fugi.plot_interpolation(phiM,cosM,(PECD_S[4]*100).T, ax=ax[1], cmap=cmap_temp, limits=[-80.,80.], kind=\"linear\", xstep=5, ystep=0.05, n=15, gaussian=1.2)\n",
     "ax[1].set_ylabel('cos\\u03D1 [adm]')\n",
     "ax[1].set_xlabel('\\u03C6 [DEG]')\n",
     "ax[1].set_aspect(aspect)\n",
@@ -858,7 +892,39 @@
     "cbar.ax.locator_params(tight=True, nbins=8)\n",
     "cbar.ax.set_xlabel('PECD %', ma=\"right\")\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Theory/0-4PECD_\"+en+\"_SR_phi_exp.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Theory/0-4PECD_\"+en+\"_S_phi_exp.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
+    "\n",
+    "if noprint:\n",
+    "    # plt.close()\n",
+    "    plt.show()\n",
+    "else:\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax = plt.subplots(2,1, figsize=(10, 18), sharex=True)\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "\n",
+    "cs,ax[0]=fugi.plot_interpolation(phiM,cosM,(PECD_R[0]*100).T, ax=ax[0], cmap=cmap_temp, limits=[-80.,80.], kind=\"linear\", xstep=5, ystep=0.05, n=15, gaussian=1.2)\n",
+    "ax[0].set_ylabel('cos\\u03D1 [adm]')\n",
+    "# ax[0].set_xlabel('\\u03C6 [DEG]')\n",
+    "ax[0].set_aspect(aspect)\n",
+    "\n",
+    "cs,ax[1]=fugi.plot_interpolation(phiM,cosM,(PECD_R[4]*100).T, ax=ax[1], cmap=cmap_temp, limits=[-80.,80.], kind=\"linear\", xstep=5, ystep=0.05, n=15, gaussian=1.2)\n",
+    "ax[1].set_ylabel('cos\\u03D1 [adm]')\n",
+    "ax[1].set_xlabel('\\u03C6 [DEG]')\n",
+    "ax[1].set_aspect(aspect)\n",
+    "\n",
+    "cbar = fig.colorbar(cs, ax=ax.ravel().tolist(), location=\"top\", orientation=\"horizontal\", shrink=0.6)\n",
+    "cbar.ax.locator_params(tight=True, nbins=8)\n",
+    "cbar.ax.set_xlabel('PECD %', ma=\"right\")\n",
+    "\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Theory/0-4PECD_\"+en+\"_R_phi_exp.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
     "\n",
     "if noprint:\n",
     "    # plt.close()\n",
@@ -878,7 +944,7 @@
     "for i,ax in enumerate(np.flip(axes.T,axis=1).ravel()):\n",
     "# for i,ax in enumerate(axes.ravel()):\n",
     "\n",
-    "    cs, ax=fugi.plot_interpolation(phiM,cosM,(PECD_SR_LF[i]*100).T,ax=ax,ystep=0.01, cmap=cmap_temp, limits=[-80.,80.])\n",
+    "    cs, ax=fugi.plot_interpolation(phiM,cosM,(PECD_S_LF[i]*100).T,ax=ax,ystep=0.01, cmap=cmap_temp, limits=[-80.,80.])\n",
     "    ax.tick_params(labelsize=12)\n",
     "    if i == 4:\n",
     "        ax.spines[:].set_color('blue')\n",
@@ -1390,8 +1456,8 @@
     "\n",
     "ax.set_title(\"b1 map \"+en)\n",
     "# aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "ax.set_xlabel('\\u03C6 [DEG]')\n",
-    "ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "ax.set_xlabel('\\u03C6$_{ph}$ [DEG]')\n",
+    "ax.set_ylabel('cos\\u03D1$_{ph}$ [adm]')\n",
     "# ax.set_aspect(aspect)\n",
     "\n",
     "# cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
@@ -1415,9 +1481,9 @@
     "\n",
     "ax.set_title(\"b1 map \"+en)\n",
     "aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "ax.set_xlabel('\\u03C6 [DEG]')\n",
+    "ax.set_xlabel('\\u03C6$_{ph}$ [DEG]')\n",
     "ax.set_xticks(xgo_uniq); ax.xaxis.set_tick_params(rotation=-45)\n",
-    "ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "ax.set_ylabel('cos\\u03D1$_{ph}$ [adm]')\n",
     "ax.set_yticks(ygo_uniq)\n",
     "ax.set_aspect(aspect)\n",
     "\n",
@@ -1483,12 +1549,12 @@
     "    # cs,ax=fugi.plot_interpolation(xgo_cos,ygo_cos,param_matrix_cos[:,0,0].T*100, ax=ax, cmap=cmap_temp)\n",
     "\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "    ax.set_ylabel('cos\\u03D1$_{ph}$ [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "    cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "    cbar.ax.set_ylabel(\"asymmetry\")\n",
     "    if i==5:\n",
-    "        ax.set_xlabel('\\u03C6 [DEG]')\n",
+    "        ax.set_xlabel('\\u03C6$_{ph}$ [DEG]')\n",
     "fig.tight_layout()\n",
     "\n",
     "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Theory/b1-6map_phi_LF_\"+en+\"_theory.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
@@ -1554,8 +1620,8 @@
     "\n",
     "    ax.set_title(\"b1 map \"+en)\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_xlabel('\\u03C6 [DEG]')\n",
-    "    ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "    ax.set_xlabel('\\u03C6$_{ph}$ [DEG]')\n",
+    "    ax.set_ylabel('cos\\u03D1$_{ph}$ [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "\n",
     "    # cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
@@ -1583,12 +1649,12 @@
     "    for ax,i in zip(axes,range(6)):\n",
     "        cs,ax=fugi.plot_interpolation(xgo_flip_uniq,ygo_flip_uniq,np.flip(np.array(param_matrix_std[:,i,0]).reshape(6,12).T,axis=1).reshape(-1), ax=ax, cmap=cmap_temp)\n",
     "        aspect=(xgo_flip_uniq.max()/ygo_flip_uniq.max())\n",
-    "        ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "        ax.set_ylabel('cos\\u03D1$_{ph}$ [adm]')\n",
     "        ax.set_aspect(aspect)\n",
     "        cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "        cbar.ax.set_ylabel(\"asymmetry\")\n",
     "        if i==5:\n",
-    "            ax.set_xlabel('\\u03C6 [DEG]')\n",
+    "            ax.set_xlabel('\\u03C6$_{ph}$ [DEG]')\n",
     "    fig.tight_layout()\n",
     "\n",
     "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/Theory/b1-6map_std_LF_\"+en+\"_theory.png\", dpi=300, transparent=False, bbox_inches='tight')"
@@ -1647,8 +1713,8 @@
     "\n",
     "ax.set_title(\"b1 map \"+en)\n",
     "# aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "ax.set_xlabel('\\u03C6 [DEG]')\n",
-    "ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "ax.set_xlabel('\\u03C6$_{ph}$ [DEG]')\n",
+    "ax.set_ylabel('cos\\u03D1$_{ph}$ [adm]')\n",
     "# ax.set_aspect(aspect)\n",
     "\n",
     "# cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
@@ -1674,12 +1740,12 @@
     "    cs,ax=fugi.plot_interpolation(np.array(xgo_phi).reshape(12,6),np.array(ygo_phi).reshape(12,6),param_matrix_opt[:,i,0].reshape(12,6), ax=ax, cmap=cmap_temp)\n",
     "\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "    ax.set_ylabel('cos\\u03D1$_{ph}$ [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "    cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "    cbar.ax.set_ylabel(\"asymmetry\")\n",
     "    if i==5:\n",
-    "        ax.set_xlabel('\\u03C6 [DEG]')\n",
+    "        ax.set_xlabel('\\u03C6$_{ph}$ [DEG]')\n",
     "fig.tight_layout()\n",
     "\n",
     "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Theory/b1-6map_phi_opt_\"+CH+\"_LF_\"+en+\"_theory.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
@@ -1753,8 +1819,8 @@
     "\n",
     "ax.set_title(\"b1 map \"+en)\n",
     "aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "ax.set_xlabel('\\u03C6 [DEG]')\n",
-    "ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "ax.set_xlabel('\\u03C6$_{ph}$ [DEG]')\n",
+    "ax.set_ylabel('cos\\u03D1$_{ph}$ [adm]')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
     "# cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=cs)\n",
@@ -1788,12 +1854,12 @@
     "    cs,ax=fugi.plot_interpolation(np.array(xgo_phi).reshape(12,6),np.array(ygo_phi_flip).reshape(12,6),param_matrix_MF[:,i,0].reshape(12,6), ax=ax, cmap=cmap_temp)\n",
     "\n",
     "    aspect=(xgo_uniq.max()/ygo_uniq.max())\n",
-    "    ax.set_ylabel('cos\\u03D1 [adm]')\n",
+    "    ax.set_ylabel('cos\\u03D1$_{ph}$ [adm]')\n",
     "    ax.set_aspect(aspect)\n",
     "    cbar = fig.colorbar(cs,shrink=0.9, ax=ax)\n",
     "    cbar.ax.set_ylabel(\"asymmetry\")\n",
     "    if i==5:\n",
-    "        ax.set_xlabel('\\u03C6 [DEG]')\n",
+    "        ax.set_xlabel('\\u03C6$_{ph}$ [DEG]')\n",
     "fig.tight_layout()\n",
     "\n",
     "fig.savefig(\"../PYTHON_graphs/OUTPUTS/Theory/b1-6map_phi_MF_\"+en+\"_theory.png\", dpi=300, transparent=False, bbox_inches='tight')\n",
